@@ -228,6 +228,8 @@ size_t ICACHE_FLASH_ATTR rest_network_put_handler(struct http_request *request)
 			}
 		}
 		request->response.state = HTTP_STATE_ASSEMBLED;
+		//We're not sending so we call this our selves.
+		http_process_response(connection);
 	}
 	return(ret);
 }
